# bgo_scheduler

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt  systray_icon.py
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
scripts/: check-verify-marker.sh  verify-reinstall-restart.ps1
src/bgo_scheduler/: __init__.py  __main__.py  cli.py  config.py  cron.py  dashboard.html  loki_logger.py  scheduler_core.py  tray.py  web_dashboard.py
tests/: conftest.py  test_app_alias.py  test_chaining.py  test_config.py  test_cron.py  test_dashboard_alias_and_disabled.py  test_dashboard_api.py  test_dashboard_chain_ui.py  test_dashboard_history_scroll.py  test_dashboard_logfollow.py  test_dashboard_selection_preserved.py  test_lazy_history.py  test_no_window.py  test_output_encoding.py  test_rules.py  test_schedule_edit.py  test_scheduler.py  test_settings.py  test_sleep_hours.py  test_tray_session_lock.py
