[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bgo-scheduler"
version = "1.9.5"
description = "Scheduler de apps com system tray, dashboard live e logs Grafana Loki"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Bruno Oliveira", email = "bruno.goncalo.oliveira@gmail.com" }]
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
]
# Sem dependências de runtime: tray nativo Win32 (ctypes) + dashboard stdlib.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.5",
]

[project.scripts]
bgo-scheduler = "bgo_scheduler.cli:main"

[project.gui-scripts]
bgo-scheduler-tray = "bgo_scheduler.cli:main_tray"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bgo_scheduler = ["dashboard.html", "icons/*.ico"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py39"
src = ["src", "tests"]
extend-exclude = ["build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
# E402: os testes ajustam sys.path antes de importar o package
per-file-ignores = { "tests/*" = ["E402"] }
